2.7.0 2020-08-24
    - change fill bar representation to match visuals of VBM (elongated bars no boxes)
    
2.6.2 2020-08-21
    - show magnitudes as fill of boxes instead of explicit number
    - change magnitudes pairs to be compatible with 70/30
    - fix bug with data writing after every block

2.6.1 2020-08-18
    - start CHANGES log
    - save data after every block
    - add a start experiment screen (minimal info), proceed by pressing "c"
    - show performance at the end of experiment
    - already give the go/nogo decision on the last screen)
    - provide a default ses_id (stored as string, so use 01,02,etc., instead of 1,2,etc.)