@@ -14,12 +14,12 @@
                 "bg_color":[-0.9,-0.9,-0.9],
                 "fg_color":[0.85,0.85,0.85],
                 "win_size":[1920,1080]}, 
-    "timing_info":{"resp_dur":2.992,
+    "timing_info":{"resp_dur":0.992,
                 "feed_dur":0.492,
                 "pause_dur":9.992,
-                "fix_mean":1.192,
+                "fix_mean":0.192,
                 "fix_range":0.2,
-                "select_mean":0.492,
+                "select_mean":0.092,
                 "select_range":0.1},
     "stim_info":{"color_combinations":[["pink","yellow"]],
                     "stim_colors": {"red":[0.265625,-0.19140625,-0.09375],
