@@ -1,5 +1,6 @@
 2.7.0 2020-08-24
     - change fill bar representation to match visuals of VBM (elongated bars no boxes)
+    - bug fix: high prob color always on the same side
     
 2.6.2 2020-08-21
     - show magnitudes as fill of boxes instead of explicit number
